[package]
name = "cruise"
version = "0.1.0"
authors = ["Will Deuschle <wdeuschle@palantir.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.3"
